--- a/index.html
+++ b/index.html
@@ -23,7 +23,73 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-
+        <!-- start Navigation bar section -->
+        <nav>
+            <div class="container">
+                <div class="logo">
+                    <h3><span>el</span>mohtarif</h3>
+                </div>
+                <ul class="main">
+                    <li><a href="#articles">articles</a></li>
+                    <li><a href="#gallery">gallery</a></li>
+                    <li><a href="#features">features</a></li>
+                    <li>
+                        <a href="#">other links</a>
+                        <div class="other-links">
+                            <img src="images/links.svg" alt="error image">
+                            <ul class="child">
+                                <li>
+                                    <a href="#testimonials">
+                                        <i class="fa-solid fa-hand-holding-heart"></i>testimonials
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#team-Members">
+                                        <i class="fa-solid fa-hand-holding-heart"></i>Team Members
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#services">
+                                        <i class="fa-solid fa-hand-holding-heart"></i>services
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#our-skills">
+                                        <i class="fa-solid fa-hand-holding-heart"></i>our skills
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#how-it-works">
+                                        <i class="fa-solid fa-hand-holding-heart"></i>how it works
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#events">
+                                        <i class="fa-solid fa-hand-holding-heart"></i>events
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#pricing-plans">
+                                        <i class="fa-solid fa-hand-holding-heart"></i>pricing plans
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#status">
+                                        <i class="fa-solid fa-hand-holding-heart"></i>status
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#request-a-discount">
+                                        <i class="fa-solid fa-hand-holding-heart"></i>request a discount
+                                    </a>
+                                </li>
+                            </ul> <!-- end child links -->
+                        </div>
+                    </li>
+                </ul> <!-- end Main links -->
+            </div>
+        </nav>
+        <!-- End Navigation bar section -->
         
         <!-- Main custom scripts -->
         <script src="js/main.js"></script>
