--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <!-- Site Title -->
         <title>Template three</title>
+        <!-- google fonts => work sans-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;500;700;900&display=swap" rel="stylesheet">
         <!-- normalize -->
         <link rel="stylesheet" href="css/normalizeV8.0.1.css">
         <!-- Fontawesome -->
@@ -90,6 +94,18 @@
             </div>
         </nav>
         <!-- End Navigation bar section -->
+
+        <!-- Start hero section -->
+        <header>
+            <div class="container">
+                <div class="text">
+                    <h1>welcome, to ahmed elmuhtarif</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo tempora soluta quas earum ipsam corporis porro a consequatur quaerat? Repellat.</p>
+                </div>
+                <img src="images/hero.svg" alt="image-header">
+            </div>
+        </header>    
+        <!-- End hero section -->
         
         <!-- Main custom scripts -->
         <script src="js/main.js"></script>
