--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
         <!-- start Navigation bar section -->
         <nav>
             <div class="container">
-                <div class="logo">
-                    <h3><span>el</span>mohtarif</h3>
-                </div>
+                <h3 class="logo">
+                    <a href="#home">
+                        <span>el</span>mohtarif
+                    </a>
+                </h3>
                 <ul class="main">
                     <li><a href="#articles">articles</a></li>
                     <li><a href="#gallery">gallery</a></li>
@@ -104,6 +106,9 @@
                 </div>
                 <img src="images/hero.svg" alt="image-header">
             </div>
+            <a class ="arrow" href="#articles">
+                <i class="fa-solid fa-circle-arrow-down"></i>
+            </a>
         </header>    
         <!-- End hero section -->
         
