--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <li><a href="#features">features</a></li>
                     <li>
                         <a href="#">other links</a>
-                        <div class="other-links">
+                        <div class="mega-menu">
                             <img src="images/links.svg" alt="error image">
                             <ul class="child">
                                 <li>
@@ -111,6 +111,104 @@
             </a>
         </header>    
         <!-- End hero section -->
+
+        <!-- Start Articles section -->
+        <section class="articles" id="articles">
+            <div class="container">
+                <h2 class="main-heading">articles</h2>
+                <div class="cards">
+                    <section class="card">
+                        <img src="images/card1.jpg" alt="card">
+                        <div class="text">
+                            <h3>name card</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
+                        </div>
+                        <div class="button">
+                            <a href="#">read more</a>
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </div>
+                    </section>
+                    <section class="card">
+                        <img src="images/card1.jpg" alt="card">
+                        <div class="text">
+                            <h3>name card</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
+                        </div>
+                        <div class="button">
+                            <a href="#">read more</a>
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </div>
+                    </section>
+                    <section class="card">
+                        <img src="images/card1.jpg" alt="card">
+                        <div class="text">
+                            <h3>name card</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
+                        </div>
+                        <div class="button">
+                            <a href="#">read more</a>
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </div>
+                    </section>
+                    <section class="card">
+                        <img src="images/card1.jpg" alt="card">
+                        <div class="text">
+                            <h3>name card</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
+                        </div>
+                        <div class="button">
+                            <a href="#">read more</a>
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </div>
+                    </section>
+                    <section class="card">
+                        <img src="images/card1.jpg" alt="card">
+                        <div class="text">
+                            <h3>name card</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
+                        </div>
+                        <div class="button">
+                            <a href="#">read more</a>
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </div>
+                    </section>
+                    <section class="card">
+                        <img src="images/card1.jpg" alt="card">
+                        <div class="text">
+                            <h3>name card</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
+                        </div>
+                        <div class="button">
+                            <a href="#">read more</a>
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </div>
+                    </section>
+                    <section class="card">
+                        <img src="images/card1.jpg" alt="card">
+                        <div class="text">
+                            <h3>name card</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
+                        </div>
+                        <div class="button">
+                            <a href="#">read more</a>
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </div>
+                    </section>
+                    <section class="card">
+                        <img src="images/card1.jpg" alt="card">
+                        <div class="text">
+                            <h3>name card</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
+                        </div>
+                        <div class="button">
+                            <a href="#">read more</a>
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
+        <!-- End Articles section -->
         
         <!-- Main custom scripts -->
         <script src="js/main.js"></script>
