--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <h3>name card</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
                         </div>
-                        <div class="button">
+                        <div class="link-more">
                             <a href="#">read more</a>
                             <i class="fas fa-long-arrow-alt-right"></i>
                         </div>
@@ -134,7 +134,7 @@
                             <h3>name card</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
                         </div>
-                        <div class="button">
+                        <div class="link-more">
                             <a href="#">read more</a>
                             <i class="fas fa-long-arrow-alt-right"></i>
                         </div>
@@ -145,7 +145,7 @@
                             <h3>name card</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
                         </div>
-                        <div class="button">
+                        <div class="link-more">
                             <a href="#">read more</a>
                             <i class="fas fa-long-arrow-alt-right"></i>
                         </div>
@@ -156,7 +156,7 @@
                             <h3>name card</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
                         </div>
-                        <div class="button">
+                        <div class="link-more">
                             <a href="#">read more</a>
                             <i class="fas fa-long-arrow-alt-right"></i>
                         </div>
@@ -167,7 +167,7 @@
                             <h3>name card</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
                         </div>
-                        <div class="button">
+                        <div class="link-more">
                             <a href="#">read more</a>
                             <i class="fas fa-long-arrow-alt-right"></i>
                         </div>
@@ -178,7 +178,7 @@
                             <h3>name card</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
                         </div>
-                        <div class="button">
+                        <div class="link-more">
                             <a href="#">read more</a>
                             <i class="fas fa-long-arrow-alt-right"></i>
                         </div>
@@ -189,7 +189,7 @@
                             <h3>name card</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
                         </div>
-                        <div class="button">
+                        <div class="link-more">
                             <a href="#">read more</a>
                             <i class="fas fa-long-arrow-alt-right"></i>
                         </div>
@@ -200,7 +200,7 @@
                             <h3>name card</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, cumque.</p>
                         </div>
-                        <div class="button">
+                        <div class="link-more">
                             <a href="#">read more</a>
                             <i class="fas fa-long-arrow-alt-right"></i>
                         </div>
