--- a/index.html
+++ b/index.html
@@ -209,6 +209,46 @@
             </div>
         </section>
         <!-- End Articles section -->
+
+        <!-- Start Gallery section -->
+        <section class="gallery" id="gallery">
+            <div class="container">
+                <h2 class="main-heading">gallery</h2>
+                <div class="cards">
+                    <section class="card">
+                        <div class="image">
+                            <img src="images/gal-5.jpg" alt="gallrey">
+                        </div>
+                    </section>
+                    <section class="card">
+                        <div class="image">
+                            <img src="images/gal-5.jpg" alt="gallrey">
+                        </div>
+                    </section>
+                    <section class="card">
+                        <div class="image">
+                            <img src="images/gal-5.jpg" alt="gallrey">
+                        </div>
+                    </section>
+                    <section class="card">
+                        <div class="image">
+                            <img src="images/gal-5.jpg" alt="gallrey">
+                        </div>
+                    </section>
+                    <section class="card">
+                        <div class="image">
+                            <img src="images/gal-5.jpg" alt="gallrey">
+                        </div>
+                    </section>
+                    <section class="card">
+                        <div class="image">
+                            <img src="images/gal-5.jpg" alt="gallrey">
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
+        <!-- End Gallery section -->
         
         <!-- Main custom scripts -->
         <script src="js/main.js"></script>
