--- a/index.html
+++ b/index.html
@@ -250,6 +250,8 @@
         </section>
         <!-- End Gallery section -->
         
+        <!-- tested  -->
+        
         <!-- Main custom scripts -->
         <script src="js/main.js"></script>
     </body>
