--- a/index.html
+++ b/index.html
@@ -250,8 +250,46 @@
         </section>
         <!-- End Gallery section -->
         
-        <!-- tested  -->
-        
+        <!-- Start features section -->
+         <section class="features">
+            <div class="container">
+                <h2 class="main-heading">features</h2>
+                <div class="cards">
+                    <section class="feature">
+                        <div class="image">
+                            <img src="images/feaT-1.jpg" alt="feature">
+                        </div>
+                        <div class="text">
+                            <h3>quality</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti exercitationem.</p>
+                            <button>more</button>
+                        </div>
+                    </section>
+                    <section class="feature">
+                        <div class="image">
+                            <img src="images/feaT-1.jpg" alt="feature">
+                        </div>
+                        <div class="text">
+                            <h3>time</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti exercitationem.</p>
+                            <button>more</button>
+                        </div>
+                    </section>
+                    <section class="feature">
+                        <div class="image">
+                            <img src="images/feaT-1.jpg" alt="feature">
+                        </div>
+                        <div class="text">
+                            <h3>passion</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti exercitationem.</p>
+                            <button>more</button>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
+        <!-- End features section -->
+
         <!-- Main custom scripts -->
         <script src="js/main.js"></script>
     </body>
