--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <!-- End Gallery section -->
         
         <!-- Start features section -->
-         <section class="features">
+         <section class="features" id="features">
             <div class="container">
                 <h2 class="main-heading">features</h2>
                 <div class="cards">
@@ -289,6 +289,94 @@
             </div>
         </section>
         <!-- End features section -->
+
+        <!-- Start Testimonials section -->
+        <div class="testimonials" id="testimonials">
+            <div class="container">
+                <h2 class="main-heading">testmonials</h2>
+                <div class="cards">
+                    <section class="card">
+                        <img src="images/mon-3.png" alt="testimonials">
+                        <h3>ahmed kamal</h3>
+                        <span>front end developer</span>
+                        <div class="icon">
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam eligendi veniam laborum sequi at impedit quaerat obcaecati?</p>
+                    </section>
+                    <section class="card">
+                        <img src="images/mon-3.png" alt="testimonials">
+                        <h3>ahmed kamal</h3>
+                        <span>front end developer</span>
+                        <div class="icon">
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam eligendi veniam laborum sequi at impedit quaerat obcaecati?</p>
+                    </section>
+                    <section class="card">
+                        <img src="images/mon-3.png" alt="testimonials">
+                        <h3>ahmed kamal</h3>
+                        <span>front end developer</span>
+                        <div class="icon">
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam eligendi veniam laborum sequi at impedit quaerat obcaecati?</p>
+                    </section>
+                    <section class="card">
+                        <img src="images/mon-3.png" alt="testimonials">
+                        <h3>ahmed kamal</h3>
+                        <span>front end developer</span>
+                        <div class="icon">
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam eligendi veniam laborum sequi at impedit quaerat obcaecati?</p>
+                    </section>
+                    <section class="card">
+                        <img src="images/mon-3.png" alt="testimonials">
+                        <h3>ahmed kamal</h3>
+                        <span>front end developer</span>
+                        <div class="icon">
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam eligendi veniam laborum sequi at impedit quaerat obcaecati?</p>
+                    </section>
+                    <section class="card">
+                        <img src="images/mon-3.png" alt="testimonials">
+                        <h3>ahmed kamal</h3>
+                        <span>front end developer</span>
+                        <div class="icon">
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                            <i class="filled fas fa-star"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam eligendi veniam laborum sequi at impedit quaerat obcaecati?</p>
+                    </section>
+                </div>
+            </div>
+        </div>
+        <!-- End Testimonials section -->
 
         <!-- Main custom scripts -->
         <script src="js/main.js"></script>
