--- a/index.html
+++ b/index.html
@@ -300,78 +300,78 @@
                         <h3>ahmed kamal</h3>
                         <span>front end developer</span>
                         <div class="icon">
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="far fa-star"></i>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam eligendi veniam laborum sequi at impedit quaerat obcaecati?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam.</p>
                     </section>
                     <section class="card">
                         <img src="images/mon-3.png" alt="testimonials">
                         <h3>ahmed kamal</h3>
                         <span>front end developer</span>
                         <div class="icon">
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="far fa-star"></i>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam eligendi veniam laborum sequi at impedit quaerat obcaecati?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam.</p>
                     </section>
                     <section class="card">
                         <img src="images/mon-3.png" alt="testimonials">
                         <h3>ahmed kamal</h3>
                         <span>front end developer</span>
                         <div class="icon">
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="far fa-star"></i>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam eligendi veniam laborum sequi at impedit quaerat obcaecati?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam.</p>
                     </section>
                     <section class="card">
                         <img src="images/mon-3.png" alt="testimonials">
                         <h3>ahmed kamal</h3>
                         <span>front end developer</span>
                         <div class="icon">
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="far fa-star"></i>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam eligendi veniam laborum sequi at impedit quaerat obcaecati?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam.</p>
                     </section>
                     <section class="card">
                         <img src="images/mon-3.png" alt="testimonials">
                         <h3>ahmed kamal</h3>
                         <span>front end developer</span>
                         <div class="icon">
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="far fa-star"></i>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam eligendi veniam laborum sequi at impedit quaerat obcaecati?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam.</p>
                     </section>
                     <section class="card">
                         <img src="images/mon-3.png" alt="testimonials">
                         <h3>ahmed kamal</h3>
                         <span>front end developer</span>
                         <div class="icon">
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
-                            <i class="filled fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="star fas fa-star"></i>
+                            <i class="far fa-star"></i>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam eligendi veniam laborum sequi at impedit quaerat obcaecati?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim nostrum quod quibusdam.</p>
                     </section>
                 </div>
             </div>
